--- a/_posts/2020-06-14-data.science.inspiration.markdown
+++ b/_posts/2020-06-14-data.science.inspiration.markdown
@@ -35,4 +35,4 @@ The main point is that the world can be encoded into data, and we live in a time
 
 > Data has intrinsic value. But it's of no use until that value is discovered.
 
-Dealing with massive datasets -- we're talking in the billions -- requires special computational and statistial tools and methods, thus, giving rise to the field of data science. Data science allows us to make use of information from all this data and can be applied to a variety of fields such as psychology, epidemiology, and economics to name a few. This is why I sit, here, in front of my computer day in and day out, learning and doing as much as possible. I sense a great power to be wielded from data science, and I intend to use this to provide solutions for humanity. This is my way of changing the world for the better. 
+Dealing with massive datasets -- we're talking in the billions -- requires special computational and statistial tools and methods, thus, giving rise to the field of data science. It is a powerful tool which allows us to make use of information from all this data and can be applied to a variety of fields such as psychology, epidemiology, and economics to name a few. Yes, I am being very broad here, but I do intend to bring more in-depth analysis of methodologies in due time. Ultimately, I just wanted you or me -- whoever is reading this -- to know that data science is my way of understanding the world to make changes for the better.   
